@@ -33,20 +33,35 @@ public class SecurityConfig {
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
             .csrf(csrf -> csrf.disable())
-            .cors(cors -> cors.configurationSource(corsConfigurationSource())) // use our CorsConfigurationSource
-            .headers(headers -> headers.frameOptions(frame -> frame.disable())) // allow Swagger iframes
+            .cors(cors -> cors.configurationSource(corsConfigurationSource()))
+            .headers(headers -> headers.frameOptions(frame -> frame.disable()))
             .authorizeHttpRequests(auth -> auth
-                // Public endpoints
+
+                // 🔓 Public Auth & Swagger
                 .requestMatchers("/api/auth/**").permitAll()
                 .requestMatchers("/swagger-ui/**", "/v3/api-docs/**", "/swagger-ui.html").permitAll()
+
+                // 🔐 Products (ADMIN only)
+                .requestMatchers("/api/products/**", "/api/v1/products/**")
+                    .hasAuthority("ADMIN")
+
+                // 🔓 Product Details (Public)
+                .requestMatchers("/api/product-details/**", "/api/v1/product-details/**")
+                    .permitAll()
+
+                // 🔓 Materials & Inventory
                 .requestMatchers("/api/materials/**", "/api/v1/materials/**").permitAll()
                 .requestMatchers("/api/inventory/**", "/api/v1/inventory/**").permitAll()
+
+                // 🔓 Misc
                 .requestMatchers("/api/orders/calculate").permitAll()
                 .requestMatchers("/uploads/**").permitAll()
-                
-                // Secured endpoints
+
+                // 🔐 Secured
                 .requestMatchers("/api/orders/**").authenticated()
                 .requestMatchers("/api/admin/**").hasAuthority("ADMIN")
+
+                // 🔐 Everything else
                 .anyRequest().authenticated()
             )
             .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
@@ -56,36 +71,60 @@ public class SecurityConfig {
         return http.build();
     }
 
+    // ✅ CORS CONFIG
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
-        configuration.setAllowedOriginPatterns(List.of("*")); 
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"));
-        configuration.setAllowedHeaders(Arrays.asList("Authorization", "Content-Type", "X-Requested-With", "Accept", "Origin"));
+
+        configuration.setAllowedOrigins(List.of(
+            "http://localhost:3000",
+            "http://localhost:5173",
+            "http://localhost:8081"
+        ));
+
+        configuration.setAllowedMethods(Arrays.asList(
+            "GET", "POST", "PUT", "PATCH", "DELETE", "OPTIONS"
+        ));
+
+        configuration.setAllowedHeaders(Arrays.asList(
+            "Authorization",
+            "Content-Type",
+            "X-Requested-With",
+            "Accept",
+            "Origin"
+        ));
+
         configuration.setExposedHeaders(List.of("Authorization"));
         configuration.setAllowCredentials(true);
-        
+
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
+
         return source;
     }
 
+    // ✅ Swagger JWT config
     @Bean
     public OpenAPI customOpenAPI() {
         return new OpenAPI()
-                .addSecurityItem(new SecurityRequirement().addList("BearerAuth"))
-                .components(new Components()
-                        .addSecuritySchemes("BearerAuth", new SecurityScheme()
-                                .name("BearerAuth")
-                                .type(SecurityScheme.Type.HTTP)
-                                .scheme("bearer")
-                                .bearerFormat("JWT")));
+            .addSecurityItem(new SecurityRequirement().addList("BearerAuth"))
+            .components(new Components()
+                .addSecuritySchemes("BearerAuth",
+                    new SecurityScheme()
+                        .name("BearerAuth")
+                        .type(SecurityScheme.Type.HTTP)
+                        .scheme("bearer")
+                        .bearerFormat("JWT")
+                )
+            );
     }
 
+    // ✅ Print Swagger URL on start
     @Bean
     public CommandLineRunner printSwaggerLink() {
         return args -> {
-            System.out.println("\n👉 SWAGGER UI: http://localhost:8081/swagger-ui/index.html\n");
+            System.out.println("\n🚀 Application Started Successfully!");
+            System.out.println("👉 SWAGGER UI: http://localhost:8081/swagger-ui/index.html\n");
         };
     }
 }
